[package]
name = "service"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
async-stripe = { version = "0.41.0", features = ["runtime-tokio-hyper"] }
axum = { version = "0.8.4", features = ["macros"] }
axum-derive-error = "0.1.0"
figment = { version = "0.10.19", features = ["env", "toml"] }
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
macros = { path = "../macros" }
serde_json = "1.0.140"
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
reqwest = "0.12.20"
jiff = "0.2.15"
discord-webhook2 = "0.4.3"
